objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Raw Data</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Attempted Contact</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>DNQ</fullName>
        </values>
        <values>
            <fullName>Dead</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Not Interested</fullName>
        </values>
        <values>
            <fullName>Working - Contacted</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AVA__AVAAI_action_required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This lead requires some action be taken by a rep</description>
        <inlineHelpText>This lead requires some action be taken by a rep</inlineHelpText>
        <label>Conversica Action Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_action_required_date__c</fullName>
        <description>The date and time it was determined action is required</description>
        <inlineHelpText>The date and time it was determined action is required</inlineHelpText>
        <label>Conversica Action Required Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_confirmed_phone_1__c</fullName>
        <description>The lead&apos;s phone number as verified or discovered by Conversica</description>
        <inlineHelpText>The lead&apos;s phone number as verified or discovered by Conversica</inlineHelpText>
        <label>Conversica Confirmed Phone 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_confirmed_phone_2__c</fullName>
        <description>The lead&apos;s phone number as verified or discovered by Conversica</description>
        <inlineHelpText>The lead&apos;s phone number as verified or discovered by Conversica</inlineHelpText>
        <label>Conversica Confirmed Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_stage__c</fullName>
        <description>The current stage of the Conversica Conversation</description>
        <inlineHelpText>The current stage of the Conversica Conversation</inlineHelpText>
        <label>Conversation Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_stage_date__c</fullName>
        <description>The date and time the current Conversation Stage changed</description>
        <inlineHelpText>The date and time the current Conversation Stage changed</inlineHelpText>
        <label>Conversation Stage Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_status__c</fullName>
        <description>The current status of the Conversica Conversation</description>
        <inlineHelpText>The current status of the Conversica Conversation</inlineHelpText>
        <label>Conversation Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_status_date__c</fullName>
        <description>The date and time the current Conversation Status was set</description>
        <inlineHelpText>The date and time the current Conversation Status was set</inlineHelpText>
        <label>Conversation Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_status_detail__c</fullName>
        <label>Deprecated Conversation Status Detail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_status_detail_date__c</fullName>
        <label>Deprecated Status Detail Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversica_lead_status__c</fullName>
        <description>The current status of the lead in Conversica</description>
        <inlineHelpText>The current status of the lead in Conversica</inlineHelpText>
        <label>Conversica Lead Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversica_lead_status_date__c</fullName>
        <description>The date and time the current Conversation status was set</description>
        <inlineHelpText>The date and time the current Conversation status was set</inlineHelpText>
        <label>Conversica Lead Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_date_added__c</fullName>
        <description>The date and time Conversica received the lead</description>
        <inlineHelpText>The date and time Conversica received the lead</inlineHelpText>
        <label>Conversica Date Added</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_discovered_email_1__c</fullName>
        <description>If a new email address is discovered in a Lead&apos;s response, this field will be populated with the additional email address.</description>
        <inlineHelpText>If a new email address is discovered in a Lead&apos;s response, this field will be populated with the additional email address.</inlineHelpText>
        <label>Conversica Discovered Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_discovered_email_2__c</fullName>
        <description>If a second new email address is discovered in a Lead’s response, this field will be populated with the additional email address</description>
        <inlineHelpText>If a second new email address is discovered in a Lead’s response, this field will be populated with the additional email address</inlineHelpText>
        <label>Conversica Discovered Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_discovered_name__c</fullName>
        <description>If a new first name is discovered in a Lead’s response, this field will be populated with the preferred first name.</description>
        <inlineHelpText>If a new first name is discovered in a Lead’s response, this field will be populated with the preferred first name.</inlineHelpText>
        <label>Conversica Discovered Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_first_message_date__c</fullName>
        <description>The date and time Conversica first sent a message to the lead</description>
        <inlineHelpText>The date and time Conversica first sent a message to the lead</inlineHelpText>
        <label>Conversica First Message Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_further_action__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the Lead is determined by your Conversica Assistant to have further questions or that they are waiting on actions from their assigned contact.</description>
        <inlineHelpText>Checked if the Lead is determined by your Conversica Assistant to have further questions or that they are waiting on actions from their assigned contact.</inlineHelpText>
        <label>Conversica Further Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_further_action_date__c</fullName>
        <description>Date and time the Lead became a Conversica Further Action lead.</description>
        <inlineHelpText>Date and time the Lead became a Conversica Further Action lead.</inlineHelpText>
        <label>Conversica Further Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_hot_lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The lead is ready to be contacted by a rep</description>
        <inlineHelpText>The lead is ready to be contacted by a rep</inlineHelpText>
        <label>Conversica Hot Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_hot_lead_date__c</fullName>
        <description>The date and time the lead became &quot;Hot&quot; in Conversica</description>
        <inlineHelpText>The date and time the lead became &quot;Hot&quot; in Conversica</inlineHelpText>
        <label>Conversica Hot Lead Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_last_message_date__c</fullName>
        <description>The date and time Conversica last sent a message to the lead</description>
        <inlineHelpText>The date and time Conversica last sent a message to the lead</inlineHelpText>
        <label>Conversica Last Message Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_last_response_date__c</fullName>
        <description>The date and time Conversica last received a response from the lead</description>
        <inlineHelpText>The date and time Conversica last received a response from the lead</inlineHelpText>
        <label>Conversica Last Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_lead_at_risk__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The lead may lose interest if not contacted soon by a rep</description>
        <inlineHelpText>The lead may lose interest if not contacted soon by a rep</inlineHelpText>
        <label>Conversica Lead At Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_lead_at_risk_date__c</fullName>
        <description>The date and time the lead became &quot;At Risk&quot; in Conversica</description>
        <inlineHelpText>The date and time the lead became &quot;At Risk&quot; in Conversica</inlineHelpText>
        <label>Conversica Lead At Risk Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_lead_profile__c</fullName>
        <description>A link to the Conversica Lead Profile page for the selected Lead.</description>
        <inlineHelpText>A link to the Conversica Lead Profile page for the selected Lead.</inlineHelpText>
        <label>Conversica Lead Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_options__c</fullName>
        <description>Options field for this object in Conversica</description>
        <inlineHelpText>Options field for this object in Conversica</inlineHelpText>
        <label>Conversica Options</label>
        <picklist>
            <picklistValues>
                <fullName>Stop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skip to follow-up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_score__c</fullName>
        <description>The Conversica Score of a lead.</description>
        <label>Deprecated Conversica Score</label>
        <picklist>
            <picklistValues>
                <fullName>Grey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_sms_opt_out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the Lead indicates they would no longer like to be messaged via SMS after having previously opted in.</description>
        <inlineHelpText>Checked if the Lead indicates they would no longer like to be messaged via SMS after having previously opted in.</inlineHelpText>
        <label>Conversica SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_status__c</fullName>
        <description>Status of an Conversica lead in the Conversica system</description>
        <label>Deprecated Conversica Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excluded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undeliverable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVA Stopped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Stopped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Messaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversica Stopped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preparing Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent Engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent Appt.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received Engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received Appt.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Messaging Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsubscribed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opt Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rep Stopped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Stopped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AVA__Campaign__c</fullName>
        <label>Deprecated Conversica Campaign</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accept_Credit_Cards__c</fullName>
        <label>Accept Credit Cards</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agent_Name__c</fullName>
        <label>Agent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_URL__c</fullName>
        <label>Lead Application URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Are_you_in_Bankruptcy_Consumer_Proposal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are you in Bankruptcy/Consumer Proposal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attempted_Contact_Lead_Stage_Date__c</fullName>
        <label>Attempted Contact Lead Stage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Average_Monthly_Credit_Card_Sales__c</fullName>
        <label>Average Monthly Credit Card Sales</label>
        <picklist>
            <picklistValues>
                <fullName>$0-$4,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5,000-$99999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$10,000-$19,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$20,000+</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Average_Monthly_Revenue__c</fullName>
        <label>Average Monthly Revenue</label>
        <picklist>
            <picklistValues>
                <fullName>$0 - $4,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5,000 - $9,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$10,000 - $24,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$25,000 - $49,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$50,000 - $99,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$100,000 - $249,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$250,000+</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Base_URL__c</fullName>
        <description>Used to get base URL in Twilio Task Trigger for Incoming Message email alert</description>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Duration__c</fullName>
        <label>Call Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <label>Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <picklist>
            <picklistValues>
                <fullName>MapleAdvance.com Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MapleAdvance.com Call</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cloufi_Twilio__Number_In_Use__c</fullName>
        <label>Number In Use</label>
        <picklist>
            <picklistValues>
                <fullName>MobilePhone</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cloufi_Twilio__SMS_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cloufi__Amount_Requested__c</fullName>
        <label>Amount Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cloufi__Application_Received_Date__c</fullName>
        <label>Application Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cloufi__Application_Sent_Date__c</fullName>
        <label>Application Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cloufi__Business_DBA_Name__c</fullName>
        <label>Business DBA Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloufi__Credit_Score__c</fullName>
        <label>Credit Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloufi__Expected_Funding_Date__c</fullName>
        <label>Expected Funding Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cloufi__Loan_Term__c</fullName>
        <label>Loan Term</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloufi__Monthly_Gross_Sale__c</fullName>
        <label>Monthly Gross Sale</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cloufi__Referral_Partner_Account__c</fullName>
        <formula>Cloufi__Referral_Partner__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referral Partner Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloufi__Referral_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referral Partner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (Referral Partner)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cloufi__Sales_Rep_Commission__c</fullName>
        <label>Sales Rep Commission</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloufi__Years_In_Business__c</fullName>
        <label>Years In Business</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <globalPicklist>Business_Countries</globalPicklist>
        <label>Country</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CreditScore__c</fullName>
        <label>Estimated Credit Score</label>
        <picklist>
            <picklistValues>
                <fullName>&lt; 500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>700+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>601-700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>501-600</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Payment_Plan__c</fullName>
        <description>Will be controlled by field: &quot;Are you in Bankruptcy/Consumer Plan&quot;?</description>
        <label>Current Payment Plan</label>
        <picklist>
            <controllingField>Are_you_in_Bankruptcy_Consumer_Proposal__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Provider__c</fullName>
        <label>Current Provider</label>
        <picklist>
            <picklistValues>
                <fullName>First Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moneris</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chase Payment Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TD Merchant Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elavon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dejardins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PayPal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Square</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stripe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPS</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Terminal_Program__c</fullName>
        <label>Current Terminal Program</label>
        <picklist>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Own</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DNQ_Lead_Stage_Date__c</fullName>
        <label>DNQ Lead Stage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submitted_For_Processing__c</fullName>
        <label>Date Submitted For Processing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dead_Lead_Stage_Date__c</fullName>
        <label>Dead Lead Stage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_ROI__c</fullName>
        <label>Description ROI</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_of_Business__c</fullName>
        <label>Description of Business</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DialSource__DS_Owner_ID__c</fullName>
        <description>The record owner&apos;s Salesforce ID. Used in Campaign source reports to distribute the records using the Record Owner Distribution feature</description>
        <formula>OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The record owner&apos;s Salesforce ID. Used in Campaign source reports to distribute the records using the Record Owner Distribution feature</inlineHelpText>
        <label>DS Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Datetime_of_Last_Disposition_DS__c</fullName>
        <description>Time stamp of when the last Disposition was clicked</description>
        <inlineHelpText>Time stamp of when the last Disposition was clicked</inlineHelpText>
        <label>Datetime of Last Disposition</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DialSource__Last_Call_Campaign_Name__c</fullName>
        <description>Name of the Call Campaign the record was last called from</description>
        <inlineHelpText>Name of the Call Campaign the record was last called from</inlineHelpText>
        <label>Last Call Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Last_Disposition_DS__c</fullName>
        <description>Name of the last Disposition clicked</description>
        <inlineHelpText>Name of the last Disposition clicked</inlineHelpText>
        <label>Last Disposition</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Next_Call_DS__c</fullName>
        <description>Datetime field used to set the next call datetime for reference in automation or Reports/List Views</description>
        <inlineHelpText>Datetime field used to set the next call datetime for reference in automation or Reports/List Views</inlineHelpText>
        <label>Next Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DialSource__Total_Call_Count_DS__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of calls made on this record</description>
        <inlineHelpText>Total number of calls made on this record</inlineHelpText>
        <label>Total Call Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Disposition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Attempts__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Follow Up Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName + &apos; &apos; + LastName</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interested_within_2_4_weeks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested within 2-4 weeks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Application_Checklist_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Application Checklist Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Latest_Follow_Up_Date__c</fullName>
        <label>Latest Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Age__c</fullName>
        <formula>Now() - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Company_Logo__c</fullName>
        <formula>Owner:User.Company_Logo__c</formula>
        <label>Lead Owner Company Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Company_Name__c</fullName>
        <formula>Owner:User.CompanyName</formula>
        <label>Lead Owner Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Fax__c</fullName>
        <formula>Owner:User.Fax</formula>
        <label>Lead Owner Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Role_Name__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <label>Lead Owner: Role: Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner__c</fullName>
        <formula>Owner:User.FirstName</formula>
        <label>Lead Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Stage_Age__c</fullName>
        <formula>IF( ISPICKVAL( Status , &apos;New&apos;) , TODAY()- New_Lead_Stage_Date__c , 
IF( ISPICKVAL( Status , &apos;Attempted Contact&apos;) , TODAY() - Attempted_Contact_Lead_Stage_Date__c , 
IF( ISPICKVAL( Status , &apos;Working - Contacted&apos;) , TODAY() - Working_Contacted_Lead_Stage_Date__c , 
IF( ISPICKVAL( Status , &apos;Not Interested&apos;) , TODAY() - Not_Interested_Lead_Stage_Date__c , 
IF( ISPICKVAL( Status , &apos;DNQ&apos;) , TODAY() - DNQ_Lead_Stage_Date__c , TODAY() - Dead_Lead_Stage_Date__c 
) 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Stage Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>